# SprintFinish

./: .gitignore  README.md  SprintFinishInstallation.md  SprintFinishManual.md  SprintFinish_Installation.md  SprintFinish_UserGuide.md  Tests~main  Varan.py  app.py  environment.yml  main.py  pyproject.toml  requirements.txt
Modules/: Main.py  integration_main.py  module1_variantrecoder.py  module2_variantvalidator.py  module3_VV_LOVD.py  module3_VV_LOVD_code_only.py  module3_VV_LOVD_code_w_logger.py  module4_VEP.py  module4_VEP_code_only.py  module4_VEP_code_w_logger.py  module4_VEP_final_w_logger.py  module5_SPDI.py  module5_VR_SPDI_code.py  rev_Sonja_code_only.py  rev_Sonja_code_w_logger.py  test_VEP_data.json  test_unit_module4.py
Modules/json_csv_module/: convert_json_to_csv.py
ProjectScripts/: Main.py  ProjectScriptsREADME.md
ProjectScripts/Modules/: GLtesting.py  ModulesREADME.md
ProjectScripts/Modules/SPDI/: module5_SPDI.py
ProjectScripts/Modules/json_csv_module/: data.json
ProjectScripts/Modules/module1_variantrecoder/: module1README.md  module1_variantrecoder.py
ProjectScripts/Modules/module2_variantvalidator/: mane_select_from_genomic_hgvs.py  module2README.md  (+1 more)
Tests/: test_Varan.py  test_main.py  test_module 1_variantrecoder.py  test_module1_variantrecoder.py  test_module2_variantvalidator.py  test_module3_VV_LOVD.py  test_module3_VV_LOVD_code.py  test_module3_VV_LOVD_code_only.py  test_module4_VEP.py  test_module4_VEP_code.py  test_module5_SPDI.py  test_unit_module4.py  test_unit_module4_VEP.py  test_unit_module5_VR_SPDI.py  test_varan.py
(+16 files in other folders)
